<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/pesquisar"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_bar_pesquisar"
        android:tint="@color/cardview_light_background"
        app:backgroundTint="?attr/colorPrimary"
        android:visible="false" />

    <item
        android:id="@+id/action_salvar"
        android:title="@string/action_salvar"
        android:icon="@drawable/ic_bar_salvar"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/action_selecionar"
        android:title="@string/action_selecionar"
        android:icon="@drawable/ic_selecionar_produtos"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/action_remover"
        android:orderInCategory="100"
        android:title="@string/action_remover"
        app:showAsAction="never"
        android:visible="false" />
</menu>
